--- a/mainSass.scss
+++ b/mainSass.scss
@@ -28,7 +28,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(material/lc.jpg);
+  background: url(material/resize/lclclc.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 15%;
@@ -40,7 +40,7 @@
 .clouds {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 0%;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -49,7 +49,7 @@
     position: absolute;
     bottom: -5%;
     max-width: 100%;
-    animation: cloud calc(3s * (var(--i))) linear infinite;
+    animation: cloud calc(5s * (var(--i))) linear infinite;
   }
 }
 
@@ -173,7 +173,7 @@
       opacity: 1;
     }
     100% {
-      transform: scale(10);
+      transform: scale(7);
     }
   }
 
@@ -194,7 +194,7 @@
     top: 0;
     right: 0;
     height: 100%;
-    width: 60%;
+    width: 80%;
     flex-direction: column;
     row-gap: 2.5rem;
     z-index: 10;
@@ -205,7 +205,7 @@
     .logohome {
       display: inline-block;
       img {
-        width: 80%;
+        width: 100%;
         margin: auto;
       }
     }
@@ -228,21 +228,6 @@
     }
   }
 }
-@media screen and (max-width: 414px) {
-  @keyframes cloud {
-    0% {
-      opacity: 0;
-      transform: scale(1);
-    }
-    25%,
-    75% {
-      opacity: 1;
-    }
-    100% {
-      transform: scale(15);
-    }
-  }
-}
 @media screen and (max-width: 425px) {
   .nav__list {
     row-gap: 1.7rem;
@@ -256,7 +241,7 @@
         opacity: 1;
       }
       100% {
-        transform: scale(25);
+        transform: scale(30);
       }
     }
   }
@@ -360,7 +345,7 @@
 }
 .section__img {
   img {
-    width: 350px;
+    width: 300px;
   }
 }
 .operation {
@@ -377,6 +362,7 @@
   margin-bottom: 4rem;
   font-weight: 500;
   font-size: 20px;
+  padding: 30px;
   transition: border 0.4s;
   & > button {
     display: inline-block;
@@ -419,7 +405,7 @@
   max-width: 1400px;
   height: 100%;
   gap: 2rem;
-  padding: 10px;
+  padding: 30px;
   margin: 1rem auto 6rem;
 
   .operation__meal {
@@ -457,9 +443,7 @@
         max-width: 300px;
       }
       .operation__price {
-        position: absolute;
-        bottom: 1rem;
-        right: 1rem;
+        float: right;
         font-weight: 600;
         font-size: 18px;
         color: hsl(352, 77, 30);
@@ -488,7 +472,7 @@
   }
 }
 .about__field {
-  padding: 20px;
+  padding: 30px;
   line-height: 1.5;
   margin: 1rem auto 3rem;
   &:first-of-type {
@@ -502,7 +486,7 @@
   width: 100%;
   height: 0;
   iframe {
-    padding: 20px;
+    padding: 30px;
 
     position: absolute;
     top: 50%;
@@ -516,14 +500,13 @@
 // slider
 
 .slider {
-  height: 650px;
+  height: 600px;
   margin: auto;
   position: relative;
   width: 90%;
   display: grid;
   place-items: center;
   overflow: hidden;
-  perspective: 500px;
   &::after,
   &::before {
     content: '';
@@ -547,17 +530,14 @@
     transform: rotateZ(180deg);
   }
   img {
-    width: 100%;
+    max-width: 100%;
     transition: transform 1s;
-    &:hover {
-      transform: translateZ(20px);
-    }
   }
   .slider-track {
     display: flex;
-    width: calc(500px * 8);
+    width: calc(600px * 8);
     animation: scroll1 25s linear infinite;
-    padding: 30px;
+    padding: 15px;
     &:hover {
       animation-play-state: paused;
     }
@@ -732,12 +712,13 @@
         }
       }
     }
-  }
-}
-.footer-wrap {
-  .footer__info,
-  .footer__socials {
-    flex-basis: 100%;
+    .footer-wrap {
+      .footer__info,
+      .footer__socials {
+        width: 100%;
+        flex-basis: 100%;
+      }
+    }
   }
 }
 
