--- a/mainSass.scss
+++ b/mainSass.scss
@@ -19,16 +19,112 @@
   margin-right: 1rem;
   margin: auto;
 }
+
 // HEADER
+body {
+  overflow-x: hidden;
+}
+
 .preload * {
   transition: none !important;
+}
+// PROMO
+.promotion {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 800px;
+  z-index: 1000;
+
+  &.hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
+  .banner {
+    position: relative;
+    background: rgb(255, 255, 255);
+    display: flex;
+    justify-items: center;
+    padding: 2rem;
+    .banner__img {
+      margin-right: 1rem;
+
+      img {
+        max-width: 70%;
+      }
+    }
+    .promo__info {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      img {
+        width: 300px;
+        margin: 1rem 0;
+        align-self: center;
+      }
+    }
+    .promo__header {
+      font-size: 3rem;
+      color: hsl(352, 77, 35);
+    }
+    .promo__subheader {
+      padding: 3rem 0 1rem;
+    }
+    .promo__content {
+      margin: 2rem auto;
+      max-width: 400px;
+    }
+    .promo__link {
+      margin: auto;
+      background: hsl(352, 77, 35);
+      width: 130px;
+      color: rgb(210, 210, 210);
+      border: 1px solid hsl(352, 77, 35);
+      border-radius: 15px;
+      padding: 8px 30px;
+      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+      &:hover {
+        color: white;
+      }
+      &:active {
+        transform: scale(0.98);
+      }
+    }
+    .promo--close {
+      font-size: 1.5rem;
+      position: absolute;
+      top: 1rem;
+      right: 0.5rem;
+      cursor: pointer;
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+  }
+}
+.promotion__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  z-index: 999;
+  transition: all 0.4s;
+
+  &.hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
 
 .header {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(material/resize/lclclc.jpg);
+  background: url(material/resize/entry.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 15%;
@@ -345,7 +441,7 @@
 }
 .section__img {
   img {
-    width: 300px;
+    width: 350px;
   }
 }
 .operation {
@@ -399,6 +495,7 @@
 
 // FIELD FOR MEALS
 .operation__field {
+  position: relative;
   display: none;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -407,6 +504,46 @@
   gap: 2rem;
   padding: 30px;
   margin: 1rem auto 6rem;
+  .operation__meal {
+    &:nth-of-type(odd) {
+      animation: fadeIn 1s;
+      animation-fill-mode: forwards;
+
+      transform: translateX(-200%);
+    }
+    &:nth-of-type(even) {
+      animation: fadeIn2 1s;
+      animation-fill-mode: forwards;
+
+      transform: translateX(200%);
+    }
+    @keyframes fadeIn {
+      0% {
+        transform: translateX(-200%) rotate(15deg);
+      }
+      90% {
+        transform: translateX(55px) rotate(15deg);
+        opacity: 0.5;
+      }
+      100% {
+        transform: translateX(0px) rotate(0deg);
+        opacity: 1;
+      }
+    }
+    @keyframes fadeIn2 {
+      0% {
+        transform: translateX(200%) rotate(-15deg);
+      }
+      90% {
+        transform: translateX(-55px) rotate(-15deg);
+        opacity: 0.5;
+      }
+      100% {
+        transform: translateX(0px) rotate(0deg);
+        opacity: 1;
+      }
+    }
+  }
 
   .operation__meal {
     max-width: 600px;
@@ -416,6 +553,7 @@
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+
     &:hover {
       border: 1px solid rgb(0, 0, 0);
       box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
@@ -465,16 +603,14 @@
   flex-direction: column;
   margin: auto;
   .section__img {
-    margin: 4rem 0;
-    img {
-      width: 350px;
-    }
+    padding: 0;
+    margin: 1rem 0 2rem;
   }
 }
 .about__field {
-  padding: 30px;
   line-height: 1.5;
   margin: 1rem auto 3rem;
+  padding: 0 30px;
   &:first-of-type {
     margin-bottom: 1rem;
   }
@@ -482,7 +618,7 @@
 .iframe__container {
   @extend %flexCenter;
   position: relative;
-  padding-bottom: 300px;
+  padding-bottom: 370px;
   width: 100%;
   height: 0;
   iframe {
@@ -643,6 +779,55 @@
   padding-bottom: 1rem;
 }
 
+// COOKIE
+.cookie__message {
+  text-align: center;
+  position: fixed;
+  top: -100%;
+  left: 0;
+  right: 0;
+  background-color: rgb(200, 200, 200);
+  color: rgb(31, 31, 31);
+  padding: 1rem;
+  z-index: 99;
+
+  transition: 0.4s;
+  &.active {
+    top: 0;
+  }
+  & a {
+    color: rgb(31, 31, 31);
+    text-decoration: underline;
+  }
+  .cookie__btn {
+    border: 0;
+    color: white;
+    padding: 8px 24px;
+    font-size: 16px;
+    margin: 1rem 1rem 0 0;
+    border-radius: 8px;
+    cursor: pointer;
+    &:hover {
+      background: rgb(255, 68, 0);
+    }
+    &:active {
+      transform: scale(0.98);
+    }
+  }
+  .cookie__btn--open {
+    background: rgba(255, 68, 0, 0.8);
+  }
+  .cookie__btn--close {
+    background: rgba(144, 38, 0, 0.7);
+  }
+}
+@media screen and (max-width: 1300px) {
+  .operation__field {
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .operation__tab-container {
     & > button {
@@ -650,15 +835,44 @@
     }
   }
   .operation__field {
-    justify-content: center;
-    align-items: center;
+    .operation__meal {
+      @keyframes fadeIn {
+        0% {
+          transform: translateX(-200%);
+        }
+        90% {
+          transform: translateX(35%);
+          opacity: 0.5;
+        }
+        100% {
+          transform: translateX(0px);
+          opacity: 1;
+        }
+      }
+      @keyframes fadeIn2 {
+        0% {
+          transform: translateX(200%);
+        }
+        90% {
+          transform: translateX(-35%);
+          opacity: 0.5;
+        }
+        100% {
+          transform: translateX(0px);
+          opacity: 1;
+        }
+      }
+    }
+  }
+  .banner__img {
+    display: none;
   }
 }
 
 @media screen and (max-width: 768px) {
   .operation__tab-container {
     & > button {
-      padding: 15px;
+      padding: 10px;
       margin-top: 2rem;
     }
     .operation__tab--active {
@@ -671,8 +885,8 @@
     .footer__info,
     .footer__socials {
       margin-top: 2rem;
-      flex-basis: 50%;
-      padding: 20px;
+      flex-basis: 100%;
+      padding: 15px;
     }
   }
 }
@@ -710,13 +924,6 @@
           bottom: -0.5rem;
           right: 1.2rem;
         }
-      }
-    }
-    .footer-wrap {
-      .footer__info,
-      .footer__socials {
-        width: 100%;
-        flex-basis: 100%;
       }
     }
   }
