--- a/mainSass.css
+++ b/mainSass.css
@@ -62,6 +62,10 @@ button {
 .section {
   padding: 5rem 0 3rem;
   border-bottom: 1px solid #cecece;
+  -webkit-transition: opacity 1s, -webkit-transform 1s;
+  transition: opacity 1s, -webkit-transform 1s;
+  transition: transform 1s, opacity 1s;
+  transition: transform 1s, opacity 1s, -webkit-transform 1s;
 }
 
 .container {
@@ -69,6 +73,10 @@ button {
   margin-left: 1rem;
   margin-right: 1rem;
   margin: auto;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -518,6 +526,12 @@ body {
   }
 }
 
+.section--hidden {
+  opacity: 0;
+  -webkit-transform: translateY(8rem);
+          transform: translateY(8rem);
+}
+
 .reservation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -537,7 +551,7 @@ body {
 
 .reservation__container {
   text-align: center;
-  padding: 2rem 2rem 4rem;
+  padding: 0rem 2rem;
   line-height: 1.5;
   max-width: 900px;
 }
@@ -549,6 +563,11 @@ body {
 
 .reservation__note {
   background-color: #c8c8c8;
+  padding: 3rem 0rem;
+}
+
+.reservation__info {
+  padding: 0 2rem;
 }
 
 .kitchen__hours--container {
@@ -634,7 +653,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin: 5rem auto 5rem;
+  margin: 1rem auto 4rem;
 }
 
 .section__img img {
@@ -645,6 +664,28 @@ body {
   max-width: 100rem;
   margin: auto;
   position: relative;
+}
+
+.btn__download {
+  background-color: gainsboro;
+  border: 1px solid #c8c8c8;
+  border-radius: 10px;
+  color: #9e1527;
+  padding: 10px 20px;
+  margin: 5rem 0rem 0rem;
+  font-weight: 600;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.btn__download:hover {
+  background-color: #c8c8c8;
+  color: #b5172c;
+}
+
+.btn__download:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
 }
 
 .operation__tab-container {
@@ -1198,6 +1239,10 @@ body {
         -ms-flex-align: center;
             align-items: center;
   }
+}
+
+.ri-arrow-down-s-line {
+  color: #902600;
 }
 
 @media screen and (max-width: 1024px) {
