--- a/mainScss.scss
+++ b/mainScss.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap');
 @import 'nullstyle.scss';
-@import 'media.scss';
-@import 'animation.scss';
+@import 'media';
+@import 'animation';
 
 //
 %flexCenter {
