--- a/media.scss
+++ b/media.scss
@@ -1,6 +1,19 @@
 // NAVBAR MENU MEDIA
 
 @media screen and (max-width: 950px) {
+  @keyframes cloud {
+    0% {
+      opacity: 0;
+      transform: scale(1);
+    }
+    25%,
+    75% {
+      opacity: 1;
+    }
+    100% {
+      transform: scale(7);
+    }
+  }
   .navbar__container {
     height: 100vh;
     .nav__toggle {
@@ -52,35 +65,10 @@
     }
   }
 }
-@media screen and (max-width: 425px) {
-  .nav__list {
-    row-gap: 1.7rem;
-  }
-}
-@media screen and (max-width: 360px) {
-  .nav__list {
-    row-gap: 1.4rem;
-  }
-}
+
 @media screen and (max-width: 320px) {
   .nav__list {
     row-gap: 1.3rem;
-  }
-}
-
-//   KITCHEN MEDIA
-
-@media screen and (max-width: 425px) {
-  .hours {
-    flex-direction: column;
-    .day {
-      padding: 2rem;
-    }
-    .stick {
-      height: 1px;
-      width: 160px;
-      background-color: black;
-    }
   }
 }
 
@@ -91,10 +79,37 @@
     align-items: center;
   }
 }
-.ri-arrow-down-s-line {
-  color: rgba(144, 38, 0, 1);
-}
 @media screen and (max-width: 1024px) {
+  .operation__field {
+    .operation__meal {
+      @keyframes fadeIn {
+        0% {
+          transform: translateX(-200%);
+        }
+        90% {
+          transform: translateX(35%);
+          opacity: 0.5;
+        }
+        100% {
+          transform: translateX(0px);
+          opacity: 1;
+        }
+      }
+      @keyframes fadeIn2 {
+        0% {
+          transform: translateX(200%);
+        }
+        90% {
+          transform: translateX(-35%);
+          opacity: 0.5;
+        }
+        100% {
+          transform: translateX(0px);
+          opacity: 1;
+        }
+      }
+    }
+  }
   .operation__tab-container {
     & > button {
       margin-right: 2rem;
@@ -128,7 +143,36 @@
 }
 
 @media screen and (max-width: 425px) {
+  .nav__list {
+    @keyframes cloud {
+      0% {
+        opacity: 0;
+        transform: scale(1);
+      }
+      25%,
+      75% {
+        opacity: 1;
+      }
+      100% {
+        transform: scale(30);
+      }
+    }
+  }
+  .nav__list {
+    row-gap: 1.7rem;
+  }
   // FIELD FOR MEALS
+  .hours {
+    flex-direction: column;
+    .day {
+      padding: 2rem;
+    }
+    .stick {
+      height: 1px;
+      width: 160px;
+      background-color: black;
+    }
+  }
   .operation__field {
     .operation__meal {
       max-width: 250px;
@@ -166,6 +210,9 @@
 }
 
 @media screen and (max-width: 375px) {
+  .nav__list {
+    row-gap: 1.4rem;
+  }
   .section__img {
     img {
       max-width: 300px;
