--- a/mainScss.scss
+++ b/mainScss.scss
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap');
-@use 'nullstyle.scss';
-@use 'media.scss';
-@use 'animation.scss';
+@use 'index';
 
 //
 %flexCenter {
