--- a/mainScss.scss
+++ b/mainScss.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap');
-@use 'index';
+@use 'index.scss';
 
 //
 %flexCenter {
