--- a/mainScss.css
+++ b/mainScss.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap");
-@use 'index.scss';
+@forward 'media';
+@forward 'animation';
+@forward 'nullstyle';
 .header, .navbar__container .nav__list, .iframe__container {
   display: -webkit-box;
   display: -ms-flexbox;
