--- a/mainScss.scss
+++ b/mainScss.scss
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Montserrat:wght@400;500;600;700&display=swap');
-@import 'style/index.scss';
+
+@import 'style/media.scss';
+@import 'style/animation.scss';
+@import 'style/nullstyle.scss';
 
 //
 %flexCenter {
