--- a/mainScss.css
+++ b/mainScss.css
@@ -142,310 +142,6 @@
   }
 }
 
-@media screen and (max-width: 950px) {
-  @-webkit-keyframes cloud {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
-    25%,
-    75% {
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(7);
-              transform: scale(7);
-    }
-  }
-  @keyframes cloud {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
-    25%,
-    75% {
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(7);
-              transform: scale(7);
-    }
-  }
-  .navbar__container {
-    height: 100vh;
-  }
-  .navbar__container .nav__toggle {
-    display: block;
-  }
-  .navbar__container .nav--open.nav__list {
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
-    -webkit-box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
-            box-shadow: rgba(0, 0, 0, 0.35) -5px 0px 10px;
-  }
-  .nav__list {
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100%;
-    width: 80%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    row-gap: 2.5rem;
-    z-index: 10;
-    background: #ebdbdb;
-    opacity: 1;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-    -webkit-transform: translateX(100%);
-            transform: translateX(100%);
-  }
-  .nav__list .logohome {
-    display: inline-block;
-  }
-  .nav__list .logohome img {
-    width: 100%;
-    margin: auto;
-  }
-  .nav__list .ri-close-fill {
-    visibility: visible;
-    position: absolute;
-    bottom: 1.6rem;
-    right: 1.5rem;
-    font-size: 2rem;
-    cursor: pointer;
-  }
-  .nav__list .nav__socials {
-    visibility: visible;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .nav__list .nav__items {
-    padding-right: 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .nav__list {
-    row-gap: 1.3rem;
-  }
-}
-
-@media screen and (max-width: 1300px) {
-  .operation__field {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  @-webkit-keyframes fadeIn {
-    0% {
-      -webkit-transform: translateX(-200%);
-              transform: translateX(-200%);
-    }
-    90% {
-      -webkit-transform: translateX(35%);
-              transform: translateX(35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn {
-    0% {
-      -webkit-transform: translateX(-200%);
-              transform: translateX(-200%);
-    }
-    90% {
-      -webkit-transform: translateX(35%);
-              transform: translateX(35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @-webkit-keyframes fadeIn2 {
-    0% {
-      -webkit-transform: translateX(200%);
-              transform: translateX(200%);
-    }
-    90% {
-      -webkit-transform: translateX(-35%);
-              transform: translateX(-35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn2 {
-    0% {
-      -webkit-transform: translateX(200%);
-              transform: translateX(200%);
-    }
-    90% {
-      -webkit-transform: translateX(-35%);
-              transform: translateX(-35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  .operation__tab-container > button {
-    margin-right: 2rem;
-  }
-  .banner__img {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .operation__tab-container > button {
-    padding: 10px;
-    margin-top: 2rem;
-  }
-  .operation__tab-container .operation__tab--active {
-    -webkit-transform: translateY(-40%);
-            transform: translateY(-40%);
-  }
-  .footer-wrap {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .footer-wrap .footer__info,
-  .footer-wrap .footer__socials {
-    margin-top: 2rem;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    padding: 15px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  @-webkit-keyframes cloud {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
-    25%,
-    75% {
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(30);
-              transform: scale(30);
-    }
-  }
-  @keyframes cloud {
-    0% {
-      opacity: 0;
-      -webkit-transform: scale(1);
-              transform: scale(1);
-    }
-    25%,
-    75% {
-      opacity: 1;
-    }
-    100% {
-      -webkit-transform: scale(30);
-              transform: scale(30);
-    }
-  }
-  .nav__list {
-    row-gap: 1.7rem;
-  }
-  .hours {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hours .day {
-    padding: 2rem;
-  }
-  .hours .stick {
-    height: 1px;
-    width: 160px;
-    background-color: black;
-  }
-  .operation__field .operation__meal {
-    max-width: 250px;
-    height: auto;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .operation__field .operation__meal img {
-    width: 250px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: auto;
-  }
-  .operation__field .operation__meal:hover {
-    border: 1px solid black;
-    -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
-  }
-  .operation__field .operation__meal:active {
-    -webkit-transform: scale(0.99);
-            transform: scale(0.99);
-  }
-  .operation__field .operation__meal .operation__description {
-    position: relative;
-    width: 230px;
-    padding-right: 10px;
-    margin: 1rem;
-  }
-  .operation__field .operation__meal .operation__description .operation__meal-content {
-    max-width: 180px;
-  }
-  .operation__field .operation__meal .operation__description .operation__price {
-    bottom: -0.5rem;
-    right: 1.2rem;
-  }
-}
-
-@media screen and (max-width: 375px) {
-  .nav__list {
-    row-gap: 1.4rem;
-  }
-  .section__img img {
-    max-width: 300px;
-  }
-}
-
 *,
 *::before,
 *::after {
@@ -507,7 +203,7 @@ button {
 }
 
 .section {
-  padding: 5rem 0 3rem;
+  padding: 7rem 0 3rem;
   border-bottom: 1px solid #cecece;
   -webkit-transition: opacity 1s, -webkit-transform 1s;
   transition: opacity 1s, -webkit-transform 1s;
@@ -601,23 +297,29 @@ body {
   max-width: 400px;
 }
 
-.promotion .banner .promo__link {
-  margin: auto;
-  background: #9e1527;
+.promotion .banner .promo__btn {
   width: 130px;
-  color: #d2d2d2;
+  text-align: center;
+  display: block;
+  margin: 2rem auto;
+  letter-spacing: 1px;
+  background-color: #9e1527;
+  color: gainsboro;
+  border-radius: 10px;
+  padding: 15px 0;
+  font-weight: 600;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.promotion .banner .promo__btn:hover {
+  background: gainsboro;
   border: 1px solid #9e1527;
-  border-radius: 15px;
-  padding: 8px 30px;
-  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+  color: #9e1527;
+  padding: 14px 0;
 }
 
-.promotion .banner .promo__link:hover {
-  color: white;
-}
-
-.promotion .banner .promo__link:active {
+.promotion .banner .promo__btn:active {
   -webkit-transform: scale(0.98);
           transform: scale(0.98);
 }
@@ -929,12 +631,15 @@ body {
   position: relative;
 }
 
-.btn__download {
+.btn {
   background-color: gainsboro;
   border: 1px solid #c8c8c8;
   border-radius: 10px;
   color: #9e1527;
   padding: 10px 20px;
+}
+
+.btn__download {
   margin: 5rem 0rem 0rem;
   font-weight: 600;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
@@ -1234,7 +939,7 @@ body {
 }
 
 .footer {
-  background: #cecece;
+  background: gainsboro;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1385,6 +1090,176 @@ body {
   color: #902600;
 }
 
+.subscribe {
+  background: #c8c8c8;
+}
+
+.subscribe__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  margin: auto;
+  gap: 2rem;
+}
+
+.subscribe__left {
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+}
+
+.subscribe__left img {
+  max-width: 100%;
+  margin: auto;
+}
+
+.subscribe__right {
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+}
+
+.subscribe__right .subscribe__header {
+  margin: 2rem auto 0;
+  min-width: 300px;
+  max-width: 600px;
+  color: #494949;
+  font-size: 2.5rem;
+  padding-bottom: 3rem;
+}
+
+.subscribe__right .subscribe__highlight {
+  position: relative;
+}
+
+.subscribe__right .subscribe__highlight::after {
+  display: block;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0.4;
+  -webkit-transform: skewX(-15deg);
+          transform: skewX(-15deg);
+  background: -webkit-gradient(linear, left top, right top, from(#626262), to(#860c1c));
+  background: linear-gradient(to right, #626262, #860c1c);
+}
+
+.subscribe__right .subscribe__btn {
+  width: 130px;
+  text-align: center;
+  display: block;
+  margin: auto;
+  letter-spacing: 1px;
+  background-color: #9e1527;
+  color: gainsboro;
+  border-radius: 10px;
+  padding: 15px 0;
+  font-weight: 600;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+}
+
+.subscribe__right .subscribe__btn:hover {
+  background: gainsboro;
+  border: 1px solid #9e1527;
+  color: #9e1527;
+  padding: 14px 0;
+}
+
+.subscribe__right .subscribe__btn:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+
+@media screen and (max-width: 1300px) {
+  .operation__field {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .subscribe__right .subscribe__header {
+    font-size: 2rem;
+  }
+  @-webkit-keyframes fadeIn {
+    0% {
+      -webkit-transform: translateX(-200%);
+              transform: translateX(-200%);
+    }
+    90% {
+      -webkit-transform: translateX(35%);
+              transform: translateX(35%);
+      opacity: 0.5;
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn {
+    0% {
+      -webkit-transform: translateX(-200%);
+              transform: translateX(-200%);
+    }
+    90% {
+      -webkit-transform: translateX(35%);
+              transform: translateX(35%);
+      opacity: 0.5;
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+      opacity: 1;
+    }
+  }
+  @-webkit-keyframes fadeIn2 {
+    0% {
+      -webkit-transform: translateX(200%);
+              transform: translateX(200%);
+    }
+    90% {
+      -webkit-transform: translateX(-35%);
+              transform: translateX(-35%);
+      opacity: 0.5;
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+      opacity: 1;
+    }
+  }
+  @keyframes fadeIn2 {
+    0% {
+      -webkit-transform: translateX(200%);
+              transform: translateX(200%);
+    }
+    90% {
+      -webkit-transform: translateX(-35%);
+              transform: translateX(-35%);
+      opacity: 0.5;
+    }
+    100% {
+      -webkit-transform: translateX(0px);
+              transform: translateX(0px);
+      opacity: 1;
+    }
+  }
+  .operation__tab-container > button {
+    margin-right: 2rem;
+  }
+  .banner__img {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 950px) {
   @-webkit-keyframes cloud {
     0% {
@@ -1479,97 +1354,26 @@ body {
   }
 }
 
-@media screen and (max-width: 320px) {
-  .nav__list {
-    row-gap: 1.3rem;
-  }
-}
-
-@media screen and (max-width: 1300px) {
-  .operation__field {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  @-webkit-keyframes fadeIn {
-    0% {
-      -webkit-transform: translateX(-200%);
-              transform: translateX(-200%);
-    }
-    90% {
-      -webkit-transform: translateX(35%);
-              transform: translateX(35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn {
-    0% {
-      -webkit-transform: translateX(-200%);
-              transform: translateX(-200%);
-    }
-    90% {
-      -webkit-transform: translateX(35%);
-              transform: translateX(35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @-webkit-keyframes fadeIn2 {
-    0% {
-      -webkit-transform: translateX(200%);
-              transform: translateX(200%);
-    }
-    90% {
-      -webkit-transform: translateX(-35%);
-              transform: translateX(-35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  @keyframes fadeIn2 {
-    0% {
-      -webkit-transform: translateX(200%);
-              transform: translateX(200%);
-    }
-    90% {
-      -webkit-transform: translateX(-35%);
-              transform: translateX(-35%);
-      opacity: 0.5;
-    }
-    100% {
-      -webkit-transform: translateX(0px);
-              transform: translateX(0px);
-      opacity: 1;
-    }
-  }
-  .operation__tab-container > button {
-    margin-right: 2rem;
-  }
-  .banner__img {
-    display: none;
-  }
-}
-
 @media screen and (max-width: 768px) {
+  .subscribe__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .subscribe__left {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin: auto;
+  }
+  .subscribe__right {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .subscribe__right .subscribe__header {
+    font-size: 2.2rem;
+    text-align: center;
+  }
   .operation__tab-container > button {
     padding: 10px;
     margin-top: 2rem;
@@ -1589,6 +1393,47 @@ body {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
     padding: 15px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .operation__field .operation__meal {
+    max-width: 250px;
+    height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .operation__field .operation__meal img {
+    width: 250px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: auto;
+  }
+  .operation__field .operation__meal:hover {
+    border: 1px solid black;
+    -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+  }
+  .operation__field .operation__meal:active {
+    -webkit-transform: scale(0.99);
+            transform: scale(0.99);
+  }
+  .operation__field .operation__meal .operation__description {
+    position: relative;
+    width: 230px;
+    padding-right: 10px;
+    margin: 1rem;
+  }
+  .operation__field .operation__meal .operation__description .operation__meal-content {
+    max-width: 180px;
+  }
+  .operation__field .operation__meal .operation__description .operation__price {
+    bottom: -0.5rem;
+    right: 1.2rem;
   }
 }
 
@@ -1642,53 +1487,18 @@ body {
   }
 }
 
-@media screen and (max-width: 500px) {
-  .operation__field .operation__meal {
-    max-width: 250px;
-    height: auto;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .operation__field .operation__meal img {
-    width: 250px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    height: auto;
-  }
-  .operation__field .operation__meal:hover {
-    border: 1px solid black;
-    -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
-  }
-  .operation__field .operation__meal:active {
-    -webkit-transform: scale(0.99);
-            transform: scale(0.99);
-  }
-  .operation__field .operation__meal .operation__description {
-    position: relative;
-    width: 230px;
-    padding-right: 10px;
-    margin: 1rem;
-  }
-  .operation__field .operation__meal .operation__description .operation__meal-content {
-    max-width: 180px;
-  }
-  .operation__field .operation__meal .operation__description .operation__price {
-    bottom: -0.5rem;
-    right: 1.2rem;
-  }
-}
-
 @media screen and (max-width: 375px) {
   .nav__list {
     row-gap: 1.4rem;
   }
   .section__img img {
     max-width: 300px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .nav__list {
+    row-gap: 1.3rem;
   }
 }
 /*# sourceMappingURL=mainScss.css.map */
